--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lietuvos pastas</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <head>
+      <!-- Container -->
+      <div class="black-header">
+        <!-- Item 1 -->
+        <div class="contact-site">
+          <a href="#">Kur mus rasti</a>
+          <a href="#">Rasykite mums</a>
+          <a href="#">1842</a>
+        </div>
+        <!-- Item 2 -->
+        <div class="info-side">
+          <a href="#">Apie imone</a>
+          <a href="#">e, prenumerata</a>
+          <a href="#">e, filatelija</a>
+          <a href="#">EN</a>
+        </div>
+      </div>
+    </head>
+  </body>
 </html>
