tolesnis saito kurimas

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lietuvos pastas</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <head>
+    <header>
       <!-- Container -->
       <div class="black-header">
         <!-- Item 1 -->
@@ -25,6 +31,21 @@
           <a href="#">EN</a>
         </div>
       </div>
-    </head>
+
+      <div class="white-header">
+        <div class="costumer-side">
+          <img src="/angliskaslogo.png" alt="Lietuvos pasto logotipas" />
+
+          <a href="#">Privatiems</a>
+          <a href="#">Verslui</a>
+        </div>
+        <div class="tools-side">
+          <a href="#">Irankiai</a>
+          <a href="#">Pagalba</a>
+          <a href="#">Paieska</a>
+          <button>Siusti siunta</button>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
