--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <!-- Item 1 -->
         <div class="contact-site">
           <a href="#">Kur mus rasti</a>
-          <a href="#">Rasykite mums</a>
+          <a href="#">Rašykite mums</a>
           <a href="#">1842</a>
         </div>
         <!-- Item 2 -->
         <div class="info-side">
-          <a href="#">Apie imone</a>
+          <a href="#">Apie įmonę</a>
           <a href="#">e, prenumerata</a>
           <a href="#">e, filatelija</a>
           <a href="#">EN</a>
@@ -40,10 +40,10 @@
           <a href="#">Verslui</a>
         </div>
         <div class="tools-side">
-          <a href="#">Irankiai</a>
+          <a href="#">Įrankiai</a>
           <a href="#">Pagalba</a>
-          <a href="#">Paieska</a>
-          <button>Siusti siunta</button>
+          <a href="#">Paieška</a>
+          <button>Siųsti siuntą</button>
         </div>
       </div>
     </header>
@@ -60,7 +60,17 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Pariatur, magni?
             </p>
-            <a href="#">Placiau</a>
+            <a href="#">Plačiau ></a>
+          </div>
+
+          <div class="card">
+            <div class="card-image"><img src="people.png" alt="people" /></div>
+
+            <p class="card-text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Pariatur, magni?
+            </p>
+            <a href="#">Plačiau ></a>
           </div>
         </div>
       </section>
