--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <!-- Item 2 -->
         <div class="info-side">
           <a href="#">Apie įmonę</a>
-          <a href="#">e, prenumerata</a>
-          <a href="#">e, filatelija</a>
+          <a href="#">E.prenumerata</a>
+          <a href="#">E.filatelija</a>
           <a href="#">EN</a>
         </div>
       </div>
